--- a/app/views/admin/charts/_bar_chart.html.haml
+++ b/app/views/admin/charts/_bar_chart.html.haml
@@ -20,5 +20,6 @@
   -values.each_with_index do |pair, index|
     -label, value = pair[0], pair[1]
     %rect{:x => index*w + w*0.1, :width=>0.8*w, :height => value*k, :y => (height - value*k), :fill => "#"+3.times.collect{rand(256).to_s(16).rjust(2,'0')}.join}
+      %title=value.l
     %text{:x => index*w + w*0.5, :width=>0.8*w, "text-anchor" => "end", :transform => "rotate(290, #{index*w + 0.6*w}, #{height + w*0.3})", :y => (height + w*0.3)}=label
     
