--- a/app/views/dashboards/production.html.haml
+++ b/app/views/dashboards/production.html.haml
@@ -7,7 +7,7 @@
 =beehive(:production) do
   -cell :demo_bar
   -hbox do
-    -cell :last_cares
+    -cell :last_events
     -cell :demo_pie
   -hbox do
     -cell :placeholder
