--- a/app/themes/tekyla/stylesheets/config.css.scss
+++ b/app/themes/tekyla/stylesheets/config.css.scss
@@ -214,7 +214,7 @@ $icons-layout: smart;
 @include all-icons-sprites;
 
 /*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic);*/
-$sans-font-family: 'Liberation Sans', sans-serif;
+$sans-font-family: 'Open Sans', Helvetica, 'Liberation Sans', sans-serif;
 $base-font-family: $sans-font-family;
 
 /*
