--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -1235,10 +1235,12 @@ input[data-datepicker] {@include text-align(center)}
 
 .beehive { 
   .box {
-
     $min-width: 300px;
     $min-height: 200px;
+    $cell-border-width: 1px;
+    $cell-border: $cell-border-width solid #CCC;
     margin-top: $default-gap;
+    padding: 0 $cell-border-width;
     &:first-child { margin-top: 0; }
     @include clearfix;
 
@@ -1246,28 +1248,41 @@ input[data-datepicker] {@include text-align(center)}
       display: none;
     }
 
+    $cell-title-vertical-padding: round($default-gap*0.6);
+    $cell-title-horizontal-padding: round($default-gap*0.8);
     .cell-title { 
       color: #000;
       font-weight: bold;
-      padding: round($default-gap*0.5) round($default-gap*0.6);
-      border-bottom: 1px solid #DDD;
+      padding: $cell-title-vertical-padding $cell-title-horizontal-padding;
+      border: $cell-border;
       background: #EEE;
+      @include background(linear-gradient(top, #EEE, white));
+      @include border-top-radius(3px);
     }
 
     .cell {
-      @include float(left);         
+      @include float(left);
       width: 100%;
-      .cell-inner { 
-        background: white;
-        border: 1px solid #DDD;
+      .cell-inner {
+        margin-left: $default-gap;
+        @include border-radius(3px);
         &.loading { 
           min-height: $min-height;
           background: image-url("themes/tekyla/cell-loader.gif") center center no-repeat;
         }
         .cell-content { 
+          border: $cell-border;
+          border-top: none;
           padding: $default-gap;
           max-width: 100%;
           overflow: auto;
+          background: white;
+          @include border-bottom-radius(3px);
+        }
+      }
+      &:first-child { 
+        .cell-inner { 
+          margin-left: 0;
         }
       }
     }
@@ -1285,8 +1300,11 @@ input[data-datepicker] {@include text-align(center)}
             margin-top: $default-gap;
             &:first-child { margin-top: 0 }
             width: 100%;
-            .cell-content { 
-              height: auto;
+            .cell-inner {
+              margin-left: 0;
+              .cell-content { 
+                height: auto;
+              }
             }
           }
         }
@@ -1296,21 +1314,18 @@ input[data-datepicker] {@include text-align(center)}
             ul.cell-titles {
               display: block;
               li { 
-                background: white;
                 @include inline-block;
-                border: 1px solid #DDD;
-                border-bottom: none;
-                @include border-top-radius(3px);
-                opacity: 0.6;
+                padding-top: $cell-border-width;
+                opacity: 0.4;
                 a {
                   text-decoration: none;
                   display: block;
-                  padding: $default-gap $default-gap;
+                  border-bottom: none;
                 }
                 &.active { 
                   opacity: 1;
-                  a { padding-bottom: $default-gap + 1px; }
-                  margin-bottom: -1px;
+                  a { padding-bottom: $cell-title-vertical-padding + $cell-border-width; }
+                  margin-bottom: (-1 * $cell-border-width);
                 }
               }
             }
@@ -1319,11 +1334,12 @@ input[data-datepicker] {@include text-align(center)}
                 display: none;
                 width: 100%;
                 margin-top : 0;
+                border-top: $cell-border;
                 &.active { 
                   display: block;
                 }
                 .cell-inner {
-                  @include border-top-radius(0);
+                  margin-left : 0;
                 }
                 .cell-title { display: none; }
               }
