--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -56,26 +56,6 @@
         -t.link(:new, :controller=>:contacts, :entity_id=>@entity.id)
       =list(:contacts)
   
-    -b.cell(tl(:x_sales, :count=>@entity.sales.count)) do
-      =toolbar do |t|
-        -t.link(:new, :controller=>:sales, :client_id=>@entity.id)
-      =list(:sales)
-  
-    -b.cell(tl(:x_incoming_payments, :count=>@entity.incoming_payments.count)) do
-      =toolbar do |t|
-        -t.link :new, :controller=>:incoming_payments, :payer_id=>@entity.id
-      =list(:incoming_payments)
-  
-    -b.cell(tl(:x_purchases, :count=>@entity.purchases.count)) do
-      =toolbar do |t|
-        -t.link(:new, :controller=>:purchases, :supplier_id=>@entity.id)
-      =list(:purchases)
-  
-    -b.cell(tl(:x_outgoing_payments, :count=>@entity.outgoing_payments.count)) do
-      =toolbar do |t|
-        -t.link :new, :controller=>:outgoing_payments, :payee_id=>@entity.id
-      =list(:outgoing_payments)
-  
     -b.cell(tl(:x_events, :count=>@entity.events.count)) do
       =toolbar do |t|
         -t.link :new, :controller=>:events, :entity_id=>@entity.id
@@ -96,12 +76,34 @@
         -t.link :new, :controller=>:mandates, :entity_id=>@entity.id
       =list(:mandates)
   
-    -#b.cell(tl(:x_cashes, :count=>@entity.cashes.count)) do
-      =toolbar do |t|
-        -t.link :new, :controller=>:cashes, :entity_id=>@entity.id
-      =list(:cashes)
   
     -if File.exist?(Rails.root.join("app", "views", "entities", "_extra.html.haml"))
       -b.cell("Extra") do
         =render :partial=>"extra"
   
+  -b.tabbox do
+    -b.cell(tl(:x_sales, :count=>@entity.sales.count)) do
+      =toolbar do |t|
+        -t.link(:new, :controller=>:sales, :client_id=>@entity.id)
+      =list(:sales)
+  
+    -b.cell(tl(:x_incoming_payments, :count=>@entity.incoming_payments.count)) do
+      =toolbar do |t|
+        -t.link :new, :controller=>:incoming_payments, :payer_id=>@entity.id
+      =list(:incoming_payments)
+  
+    -b.cell(tl(:x_purchases, :count=>@entity.purchases.count)) do
+      =toolbar do |t|
+        -t.link(:new, :controller=>:purchases, :supplier_id=>@entity.id)
+      =list(:purchases)
+  
+    -b.cell(tl(:x_outgoing_payments, :count=>@entity.outgoing_payments.count)) do
+      =toolbar do |t|
+        -t.link :new, :controller=>:outgoing_payments, :payee_id=>@entity.id
+      =list(:outgoing_payments)
+  
+    -#b.cell(tl(:x_cashes, :count=>@entity.cashes.count)) do
+      =toolbar do |t|
+        -t.link :new, :controller=>:cashes, :entity_id=>@entity.id
+      =list(:cashes)
+
