--- a/app/views/animal_events/_form.html.haml
+++ b/app/views/animal_events/_form.html.haml
@@ -1,22 +1,19 @@
 =formalize do |f|
-  -f.error :animal_care
+  -f.error :animal_event
 
-=field_set(@animal_care, :general_informations) do |f|
+=field_set(@animal_event, :general_informations) do |f|
   =f.input :name
   =f.association :nature, :as => :radio_buttons
   =f.association :animal, :label_method => :list_animal_full_name , :value_method => :id, :include_blank => true, :default_value => :blank
   =f.association :animal_group, :include_blank => true, :default_value => :blank
-  =f.input :start_on
-  =f.input :end_on, :include_blank => true, :default_value => :blank
+  =f.input :started_on
+  =f.input :stopped_on, :include_blank => true, :default_value => :blank
 
-=field_set(@animal_care, :diagnostic_informations) do |f|
+=field_set(@animal_event, :diagnostic_informations) do |f|
   =f.association :diseases, :as => :check_boxes
-  =f.input :description
-  =f.association :entity
+  
+=field_set(@animal_event, :medical_informations) do |f|
+  =f.association :treatment, :include_blank => true, :default_value => :blank
 
-=field_set(@animal_care, :medical_informations) do |f|
-  =f.input :comment
-  =f.association :drugs, :as => :check_boxes
-
-=field_set(@animal_care, :third_informations) do |f|
-  =f.association :entity
+=field_set(@animal_event, :third_informations) do |f|
+  =f.association :watcher, :include_blank => true, :default_value => :blank
