--- a/app/views/animal_treatments/_form.html.haml
+++ b/app/views/animal_treatments/_form.html.haml
@@ -9,18 +9,20 @@
   =f.input :prescription_number
   =f.association :prescriptor
   
-=field_set(@animal_treatment, :animal_informations) do |f|
-  =f.association :animals, :include_blank => true, :default_value => :blank
+=field_set(@animal_treatment, :group) do |f|
+  =f.association :animals, :label_method => :list_animal_full_name , :value_method => :id, :include_blank => true, :default_value => :blank
   =f.association :animal_groups, :as => :check_boxes, :include_blank => true, :default_value => :blank
 
-=field_set(@animal_treatment, :disease_informations) do |f|
+=field_set(@animal_treatment, :disease) do |f|
   =f.association :disease, :include_blank => true, :default_value => :blank
   
-=field_set(@animal_treatment, :drug_informations) do |f|
+=field_set(@animal_treatment, :drug) do |f|
   =f.association :drug, :include_blank => true, :default_value => :blank
   =f.input :quantity
   =f.association :unit
-  =f.input :duration
   =f.input :per_unit
+  
+=field_set(@animal_treatment, :delays) do |f|
   =f.input :duration_wait_for_milk
   =f.input :duration_wait_for_meat
+  =f.input :duration
