--- a/app/views/animal_groups/_form.html.haml
+++ b/app/views/animal_groups/_form.html.haml
@@ -4,5 +4,5 @@
   -input :comment
   -input :age_min
   -input :age_max
-  -input :sex, :collection => AnimalGroup::SEXES, :as => :radio_buttons
+  -input :sex
   -input :pregnant
