--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -15,12 +15,13 @@
     #wrap
       %aside#side.visible=side_tag
       #main
-        %header#header
-          =main_toolbar_tag
-          =heading_tag
-          =subheading_tag
-        #content
-          =notifications_tag
-          =yield
+        #main-wrapper
+          %header#header
+            =main_toolbar_tag
+            =heading_tag
+            =subheading_tag
+          #content
+            =notifications_tag
+            =yield
     %footer#legals=legals_sentence
     =yield :popover
