--- a/app/views/animals/show.html.haml
+++ b/app/views/animals/show.html.haml
@@ -3,24 +3,30 @@
   -t.print_animal @animal
   -t.destroy(@animal, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal.destroyable?
 
-=attributes_list(@animal) do |l| # liste des champs à afficher
-  -l.attribute :name
-  -l.attribute :race, :url => true
-  -l.attribute :group, :url => true # on affiche l'attribut name de l'entité AnimalGroup associé par l'attribut group de l'entité courante Animal avec un lien vers ce groupe
-  -l.attribute :sex
-  -l.attribute :mother, :url => true
-  -l.attribute :identification_number
-  -l.attribute :income_on
-  -l.attribute :outgone_on
-  -l.attribute :purchased_on
-  -l.attribute :comment
-  =image_tag(@animal.picture.url(:thumb))
+=beehive do |b|
+  -b.cell :details do
 
-=tabbox(:animal) do |tb|
-  -tb.tab(:events) do
-    =toolbar do |t|
-      -t.link(:new, :controller=>:animal_events, :animal_id=>@animal.id)
-    =list(:events)
-  -tb.tab(:children) do
-    =list(:children)
+    =attributes_list(@animal) do |l| # liste des champs à afficher
+      -l.attribute :name
+      -l.attribute :race, :url => true
+      -l.attribute :group, :url => true # on affiche l'attribut name de l'entité AnimalGroup associé par l'attribut group de l'entité courante Animal avec un lien vers ce groupe
+      -l.attribute :sex
+      -l.attribute :mother, :url => true
+      -l.attribute :identification_number
+      -l.attribute :income_on
+      -l.attribute :outgone_on
+      -l.attribute :purchased_on
+      -l.attribute :comment
+    -if @animal.picture.exists?
+      =image_tag(@animal.picture.url(:thumb))
+
+  -b.tabbox do
+
+    -b.cell(:events) do
+      =toolbar do |t|
+        -t.link(:new, :controller=>:animal_events, :animal_id=>@animal.id)
+      =list(:events)
+
+    -b.cell(:children) do
+      =list(:children)
 
