--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -4,7 +4,7 @@
   -t.print_entity @entity
   -t.destroy(@entity, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @entity.destroyable?
 
-=beehive(:entity) do |b|
+=beehive do |b|
   -b.cell :details do
     =attributes_list(@entity) do |l|
       -l.attribute :last_name
