--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -410,7 +410,7 @@ table.quick td { padding: 0px 4px; }
       }
     }
   }
-  @each $field_set in care, drug, general_informations, stocks, genealogy, group, treatment { 
+  @each $field_set in care, drug, delay, general_informations, stock, animal, vegetable, entity, asset, genealogy, group, treatment { 
     &##{ $field_set } .fieldset-legend .icon {
       @include icons-sprite($field_set);
     }
