--- a/app/views/animals/_form.html.haml
+++ b/app/views/animals/_form.html.haml
@@ -4,6 +4,7 @@
   -input :name , :hint => "le nom de votre animal"# affiche le champ name de l entité animal avec une infos derriere
   -input :sex # affiche le champ sexe sous forme de radio avec une collection de proposition (M ou F) de l entité animal
   -input :born_on, :as => :date, :end_year => Date.today.year - 40
+  -input :working_number
   -input :identification_number, :placeholder => 'FR + DEPT + 8 chiffres'
   -input :comment # affiche le champ comment formaté en zone de texte
   -input :picture
