--- a/app/views/entities/_phone_fields.html.haml
+++ b/app/views/entities/_phone_fields.html.haml
@@ -1,5 +1,5 @@
 -# Generated automatically. Don't edit this file.
 .nested-fields
-  =link_to_remove_association 'Remove phone', f
+  =link_to_remove_association('labels.remove_phone'.t, f, :class => 'nested-remove remove-phone')
   =f.input(:canal, :as => :hidden)
   =f.input(:coordinate, :as => :tel)
