--- a/app/views/entities/_fax_fields.html.haml
+++ b/app/views/entities/_fax_fields.html.haml
@@ -1,5 +1,5 @@
 -# Generated automatically. Don't edit this file.
 .nested-fields
-  =link_to_remove_association 'Remove fax', f
+  =link_to_remove_association('labels.remove_fax'.t, f, :class => 'nested-remove remove-fax')
   =f.input(:canal, :as => :hidden)
   =f.input(:coordinate, :as => :tel)
