--- a/app/views/entities/_mail_fields.html.haml
+++ b/app/views/entities/_mail_fields.html.haml
@@ -1,6 +1,6 @@
 -# Generated automatically. Don't edit this file.
 .nested-fields
-  =link_to_remove_association 'Remove mail', f
+  =link_to_remove_association('labels.remove_mail'.t, f, :class => 'nested-remove remove-mail')
   =f.input(:canal, :as => :hidden)
   =f.input(:mail_line_1)
   =f.input(:mail_line_2)
